--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.2",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "framer-motion": "^11.3.27",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
